--- a/Embebidos/NanoKernel/NodoMedidor/packages.config
+++ b/Embebidos/NanoKernel/NodoMedidor/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="nanoFramework.CoreLibrary" version="1.15.5" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Device.Adc" version="1.1.11" targetFramework="netnano1.0" />
 </packages>
