--- a/SmartCompost/NanoKernel/packages.config
+++ b/SmartCompost/NanoKernel/packages.config
@@ -10,6 +10,7 @@
   <package id="nanoFramework.System.Device.Gpio" version="1.1.38" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Wifi" version="1.5.81" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Diagnostics.Stopwatch" version="1.2.418" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.IO.FileSystem" version="1.1.36" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.IO.Ports" version="1.1.78" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.IO.Streams" version="1.1.59" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Math" version="1.5.43" targetFramework="netnano1.0" />
@@ -17,6 +18,7 @@
   <package id="nanoFramework.System.Net.Http" version="1.5.134" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Net.Sockets.UdpClient" version="1.1.61" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Net.WebSockets" version="1.1.92" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Runtime" version="1.0.6" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Text" version="1.2.54" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Threading" version="1.1.32" targetFramework="netnano1.0" />
 </packages>
