--- a/SmartCompost/Test.SIM800L/Test.SIM800L.csproj
+++ b/SmartCompost/Test.SIM800L/Test.SIM800L.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.0-preview.2.24128.5" />
   </ItemGroup>
 
 </Project>
