--- a/SmartCompost/NanoKernel/packages.config
+++ b/SmartCompost/NanoKernel/packages.config
@@ -1,24 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="nanoFramework.CoreLibrary" version="1.15.5" targetFramework="netnano1.0" />
-  <package id="nanoFramework.DependencyInjection" version="1.1.3" targetFramework="netnano1.0" />
-  <package id="nanoFramework.Hardware.Esp32" version="1.6.12" targetFramework="netnano1.0" />
-  <package id="nanoFramework.Json" version="2.2.117" targetFramework="netnano1.0" />
-  <package id="nanoFramework.Runtime.Events" version="1.11.15" targetFramework="netnano1.0" />
-  <package id="nanoFramework.Runtime.Native" version="1.6.12" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Collections" version="1.5.31" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Device.Gpio" version="1.1.38" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Device.Wifi" version="1.5.81" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Diagnostics.Stopwatch" version="1.2.418" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.IO.FileSystem" version="1.1.41" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.IO.Ports" version="1.1.84" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.IO.Streams" version="1.1.59" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Math" version="1.5.43" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Net" version="1.10.77" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Net.Http" version="1.5.134" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Net.Sockets.UdpClient" version="1.1.61" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Net.WebSockets" version="1.1.92" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Runtime" version="1.0.6" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Text" version="1.2.54" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Threading" version="1.1.32" targetFramework="netnano1.0" />
+  <package id="nanoFramework.CoreLibrary" version="1.15.5" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.DependencyInjection" version="1.1.3" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Hardware.Esp32" version="1.6.12" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Json" version="2.2.117" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Runtime.Events" version="1.11.15" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Runtime.Native" version="1.6.12" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Collections" version="1.5.31" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Device.Gpio" version="1.1.38" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Device.Wifi" version="1.5.81" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Diagnostics.Stopwatch" version="1.2.418" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.IO.FileSystem" version="1.1.41" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.IO.Ports" version="1.1.84" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.IO.Streams" version="1.1.59" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Math" version="1.5.43" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Net" version="1.10.77" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Net.Http" version="1.5.134" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Net.Sockets.UdpClient" version="1.1.61" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Net.WebSockets" version="1.1.92" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Runtime" version="1.0.6" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Text" version="1.2.54" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Threading" version="1.1.32" targetFramework="netnanoframework10" />
 </packages>
