--- a/SmartCompost/NodoAP/app.config
+++ b/SmartCompost/NodoAP/app.config
@@ -6,6 +6,10 @@
         <assemblyIdentity name="System.Net" publicKeyToken="c07d481e9758c731" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.10.77.0" newVersion="1.10.77.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="nanoFramework.Runtime.Events" publicKeyToken="c07d481e9758c731" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.11.15.0" newVersion="1.11.15.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
