--- a/SmartCompost/NodoTest/app.config
+++ b/SmartCompost/NodoTest/app.config
@@ -3,6 +3,10 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
+        <assemblyIdentity name="mscorlib" publicKeyToken="c07d481e9758c731" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.14.3.0" newVersion="1.14.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Net" publicKeyToken="c07d481e9758c731" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.10.79.0" newVersion="1.10.79.0" />
       </dependentAssembly>
