--- a/SmartCompost/NanoKernel/packages.config
+++ b/SmartCompost/NanoKernel/packages.config
@@ -8,6 +8,7 @@
   <package id="nanoFramework.Runtime.Native" version="1.6.12" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Collections" version="1.5.31" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Device.Gpio" version="1.1.41" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Device.Spi" version="1.3.52" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Device.Wifi" version="1.5.85" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Diagnostics.Stopwatch" version="1.2.418" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.IO.FileSystem" version="1.1.47" targetFramework="netnanoframework10" />
@@ -16,7 +17,7 @@
   <package id="nanoFramework.System.Math" version="1.5.43" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Net" version="1.10.79" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Net.Http" version="1.5.138" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Net.Sockets.UdpClient" version="1.1.61" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Net.Sockets.UdpClient" version="1.1.63" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Net.WebSockets" version="1.1.98" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Runtime" version="1.0.27" targetFramework="netnanoframework10" />
   <package id="nanoFramework.System.Text" version="1.2.54" targetFramework="netnanoframework10" />
