--- a/SmartCompost/NodoMedidor/app.config
+++ b/SmartCompost/NodoMedidor/app.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="nanoFramework.Runtime.Events" publicKeyToken="c07d481e9758c731" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.11.18.0" newVersion="1.11.18.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Device.Gpio" publicKeyToken="c07d481e9758c731" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.41.0" newVersion="1.1.41.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
