--- a/SmartCompost/NanoKernel/packages.config
+++ b/SmartCompost/NanoKernel/packages.config
@@ -1,24 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="nanoFramework.CoreLibrary" version="1.15.5" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Hardware.Esp32" version="1.6.15" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Json" version="2.2.122" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Runtime.Events" version="1.11.18" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Runtime.Native" version="1.6.12" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Collections" version="1.5.31" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Device.Gpio" version="1.1.41" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Device.Spi" version="1.3.52" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Device.Wifi" version="1.5.85" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Diagnostics.Stopwatch" version="1.2.418" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.IO.FileSystem" version="1.1.47" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.IO.Ports" version="1.1.86" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.IO.Streams" version="1.1.59" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Math" version="1.5.43" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Net" version="1.10.79" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Net.Http" version="1.5.138" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Net.Sockets.UdpClient" version="1.1.63" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Net.WebSockets" version="1.1.98" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Runtime" version="1.0.27" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Text" version="1.2.54" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Threading" version="1.1.32" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.CoreLibrary" version="1.15.5" targetFramework="netnano1.0" />
+  <package id="nanoFramework.Hardware.Esp32" version="1.6.15" targetFramework="netnano1.0" />
+  <package id="nanoFramework.Json" version="2.2.122" targetFramework="netnano1.0" />
+  <package id="nanoFramework.Runtime.Events" version="1.11.18" targetFramework="netnano1.0" />
+  <package id="nanoFramework.Runtime.Native" version="1.6.12" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Collections" version="1.5.31" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Device.Gpio" version="1.1.41" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Device.Spi" version="1.3.52" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Device.Wifi" version="1.5.85" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Diagnostics.Stopwatch" version="1.2.418" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.IO.FileSystem" version="1.1.47" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.IO.Ports" version="1.1.86" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.IO.Streams" version="1.1.59" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Math" version="1.5.43" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Net" version="1.10.79" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Net.Http" version="1.5.138" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Net.Sockets.UdpClient" version="1.1.63" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Net.WebSockets" version="1.1.98" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Runtime" version="1.0.27" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Text" version="1.2.54" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Threading" version="1.1.32" targetFramework="netnano1.0" />
 </packages>
