--- a/SmartCompost/PruebaSensores/packages.config
+++ b/SmartCompost/PruebaSensores/packages.config
@@ -4,6 +4,8 @@
   <package id="nanoFramework.Device.OneWire" version="1.4.14" targetFramework="netnano1.0" />
   <package id="nanoFramework.Hardware.Esp32" version="1.6.15" targetFramework="netnano1.0" />
   <package id="nanoFramework.Runtime.Events" version="1.11.18" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Device.Adc" version="1.1.11" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Device.Gpio" version="1.1.41" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Model" version="1.2.418" targetFramework="netnano1.0" />
   <package id="UnitsNet.nanoFramework.Temperature" version="6.0.0-pre007" targetFramework="netnano1.0" />
 </packages>
