--- a/SmartCompost/PruebaSensores/packages.config
+++ b/SmartCompost/PruebaSensores/packages.config
@@ -7,5 +7,6 @@
   <package id="nanoFramework.System.Device.Adc" version="1.1.11" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Gpio" version="1.1.41" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Model" version="1.2.418" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Text" version="1.2.54" targetFramework="netnano1.0" />
   <package id="UnitsNet.nanoFramework.Temperature" version="6.0.0-pre007" targetFramework="netnano1.0" />
 </packages>
