--- a/SmartCompost/ClienteMock/MockSmartcompost.csproj
+++ b/SmartCompost/ClienteMock/MockSmartcompost.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="nanoFramework.System.Device.Spi" Version="1.3.52" />
+  </ItemGroup>
+
 </Project>
