--- a/SmartCompost/NodoMedidor/packages.config
+++ b/SmartCompost/NodoMedidor/packages.config
@@ -4,6 +4,7 @@
   <package id="nanoFramework.Runtime.Events" version="1.11.18" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Adc" version="1.1.11" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Gpio" version="1.1.41" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Device.Spi" version="1.3.52" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Wifi" version="1.5.85" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.IO.Streams" version="1.1.59" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Net" version="1.10.79" targetFramework="netnano1.0" />
